fix typeface and spacing to match design

--- a/styles/components/_top-collections.scss
+++ b/styles/components/_top-collections.scss
@@ -42,7 +42,7 @@
 }
 
 .has-fixed-width {
-  min-width: 95px;
+  min-width: 98px;
 }
 
 @include touch {
